--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ body{
     display:flex;
     flex-direction: column;
     align-items: center;
+    background-color: #F9C769;
+}
+
+h1{
+    font-size: 50px
+    
 }
 
 canvas{
